--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.jpg
-https://ibb.co/7JWVXzf
 *.png
-https://ibb.co/HtGZ7QB
+#equipoPlatzi
+#https://ibb.co/7JWVXzf
+#Logo
+#https://ibb.co/HtGZ7QB
